--- a/sections/cl-main-article.liquid
+++ b/sections/cl-main-article.liquid
@@ -46,21 +46,19 @@
           class="page-width page-width--narrow{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %}"
           {{ block.shopify_attributes }}
         >
-          <h1
-            class="article-template__title"
-          >
+          <span class=" twcss-pb-8 twcss-inline-block twcss-text-[#666]">
+            {%- if block.settings.blog_show_date -%}
+              <span class="twcss-mr-1 twcss-normal-case twcss-text-2xl ]">
+                {{- article.published_at |  date: "%d %B  %Y" -}}
+              </span>
+            {%- endif -%}
+            {%- if block.settings.blog_show_author -%}
+              <span class="twcss-normal-case">by {{ article.metafields.blog_post.author.value.name }}</span>
+            {%- endif %}
+          </span>
+          <h1 class="h1" >
             {{ article.title | escape }}
           </h1>
-          {%- if block.settings.blog_show_date -%}
-            <span class="circle-divider caption-with-letter-spacing">
-              {{- article.published_at | time_tag: format: 'date' -}}
-            </span>
-          {%- endif -%}
-          {%- if block.settings.blog_show_author -%}
-            <span class="caption-with-letter-spacing">
-              <span>{{ article.author }}</span>
-            </span>
-          {%- endif -%}
         </header>
 
       {%- when 'content' -%}
@@ -280,7 +278,7 @@
 
 {% schema %}
 {
-  "name": "t:sections.main-article.name",
+  "name": "CL Main Article",
   "tag": "section",
   "class": "section",
   "blocks": [
