--- a/assets/custom-tailwind.css
+++ b/assets/custom-tailwind.css
@@ -388,3 +388,12 @@ ul.collection-list .card__content {
 .article-template__back {
   @apply twcss-hidden;
 }
+
+/* Collapsable Row */
+.h4.accordion__title {
+  @apply twcss-text-[24px];
+}
+.h4.accordion__title,
+.accordion__content {
+  @apply twcss-text-black twcss-text-black;
+}
