--- a/assets/app.css
+++ b/assets/app.css
@@ -16,6 +16,7 @@
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.title--primary,
 .contains-content-container h3,
 .banner__content h2,
 .contains-content-container h2,
@@ -539,23 +540,6 @@ a.pagination__item-arrow {
   margin-right: 0.25rem;
 }
 
-/** Newsletter **/
-
-@media (min-width: 750px) {
-  .newsletter__wrapper {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .newsletter__wrapper .newsletter__left {
-    flex-basis: 50%;
-  }
-
-  .newsletter__wrapper .newsletter__right {
-    flex-basis: 50%;
-  }
-}
-
 /** Slideshow **/
 
 .slideshow__controls {
@@ -570,7 +554,7 @@ ul.collection-list .card__content {
 
 /** blogs & pages **/
 
-.article-template__content,
+.rte,
 .shopify-policy__container {
   --tw-text-opacity: 1 !important;
   color: rgb(0 0 0 / var(--tw-text-opacity)) !important;
@@ -590,14 +574,6 @@ ul.collection-list .card__content {
   h5 {
     font-weight: 700;
   }
-  h1,
-  h2,
-  h3,
-  h4,
-  h5 {
-    --tw-text-opacity: 1 !important;
-    color: rgb(0 0 0 / var(--tw-text-opacity)) !important;
-  }
   p {
     margin-bottom: 1rem;
   }
@@ -607,23 +583,11 @@ ul.collection-list .card__content {
   }
 }
 
-.article-template__content h2 {
-  font-weight: 700 !important;
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
 .rte img {
   border-style: none !important;
   display: inline-block !important;
   padding-top: 4rem;
   padding-bottom: 4rem;
-}
-
-/** Collections **/
-
-.collection-hero__title {
-  font-weight: 700;
 }
 
 .article-template__back {
@@ -633,6 +597,12 @@ ul.collection-list .card__content {
 .shopify-policy__container {
   margin-bottom: 8rem;
   padding-top: 2rem;
+}
+
+/** Collections **/
+
+.collection-hero__title {
+  font-weight: 700;
 }
 
 /* Collapsable Row */
@@ -750,6 +720,68 @@ span.cl-swatch {
   --tw-text-opacity: 1;
   color: rgb(35 31 32 / var(--tw-text-opacity));
 }
+
+/** Newsletter **/
+
+.newsletter__wrapper {
+  gap: 2rem;
+}
+
+@media (min-width: 750px) {
+  .newsletter__wrapper {
+    display: flex;
+  }
+}
+
+.newsletter__wrapper .newsletter__left {
+  text-align: left;
+}
+
+@media (min-width: 750px) {
+  .newsletter__wrapper .newsletter__left {
+    flex-basis: 50%;
+    padding-left: 16rem;
+  }
+}
+
+.newsletter__wrapper .newsletter__right {
+  align-items: flex-start;
+  text-align: left;
+}
+
+@media (min-width: 750px) {
+  .newsletter__wrapper .newsletter__right {
+    flex-basis: 50%;
+  }
+}
+
+.newsletter__wrapper .newsletter__right .newsletter-form {
+  margin: 0px !important;
+}
+
+.newsletter-form__field-wrapper .field__input {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
+}
+
+.newsletter-form__field-wrapper .button {
+  width: 100% !important;
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity)) !important;
+}
+
+.newsletter__wrapper > * + * {
+  margin: 0px !important;
+}
+
+.newsletter__right label {
+  margin-bottom: 0.25rem;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+/** Forms **/
 
 /*! tailwindcss v3.4.11 | MIT License | https://tailwindcss.com*/
 
@@ -1391,6 +1423,16 @@ ol {
   margin-right: 0.5rem;
 }
 
+.twcss-my-16 {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+
+.twcss-my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
 .twcss-mb-4 {
   margin-bottom: 1rem;
 }
@@ -1490,6 +1532,11 @@ ol {
 .twcss-border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.twcss-bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .twcss-bg-gray-200 {
