--- a/assets/custom-tailwind.css
+++ b/assets/custom-tailwind.css
@@ -14,6 +14,7 @@
   @apply twcss-text-black;
 }
 
+.title--primary,
 .contains-content-container h3,
 .banner__content h2,
 .contains-content-container h2,
@@ -382,18 +383,6 @@ a.pagination__item-arrow {
   @apply twcss-mr-1;
 }
 
-/** Newsletter **/
-.newsletter__wrapper {
-  @apply md:twcss-flex md:twcss-justify-between;
-}
-
-.newsletter__wrapper .newsletter__left {
-  @apply md:twcss-basis-1/2;
-}
-.newsletter__wrapper .newsletter__right {
-  @apply md:twcss-basis-1/2;
-}
-
 /** Slideshow **/
 .slideshow__controls {
   @apply twcss-border-none !important;
@@ -405,7 +394,7 @@ ul.collection-list .card__content {
 }
 
 /** blogs & pages **/
-.article-template__content,
+.rte,
 .shopify-policy__container {
   @apply twcss-text-black !important;
   h1,
@@ -417,34 +406,29 @@ ul.collection-list .card__content {
   .embed-container {
     @apply twcss-mb-8;
   }
+
   h1,
   h2,
   h3,
   h4,
   h5 {
     @apply twcss-font-bold;
-    @apply twcss-text-black !important;
   }
+
   p {
     @apply twcss-mb-4;
   }
+
   blockquote,
   .embed-container {
     @apply twcss-mt-4;
   }
-}
-.article-template__content h2 {
-  @apply h2;
 }
 
 .rte img {
   @apply twcss-border-none !important;
   @apply twcss-inline-block !important;
   @apply twcss-py-16;
-}
-/** Collections **/
-.collection-hero__title {
-  @apply twcss-font-bold;
 }
 
 .article-template__back {
@@ -455,13 +439,18 @@ ul.collection-list .card__content {
   @apply twcss-pt-8 twcss-mb-32;
 }
 
+/** Collections **/
+.collection-hero__title {
+  @apply twcss-font-bold;
+}
+
 /* Collapsable Row */
 .h4.accordion__title {
   @apply twcss-text-[24px];
 }
 .h4.accordion__title,
 .accordion__content {
-  @apply twcss-text-black twcss-text-black;
+  @apply twcss-text-black;
   @apply twcss-p-0 !important;
 }
 
@@ -539,3 +528,37 @@ span.cl-swatch {
 .collection-hero__description {
   @apply twcss-text-[#231F20];
 }
+
+/** Newsletter **/
+.newsletter__wrapper {
+  @apply md:twcss-flex twcss-gap-8;
+}
+
+.newsletter__wrapper .newsletter__left {
+  @apply md:twcss-basis-1/2 twcss-text-left md:twcss-pl-64;
+}
+
+.newsletter__wrapper .newsletter__right {
+  @apply md:twcss-basis-1/2 twcss-text-left twcss-items-start;
+}
+
+.newsletter__wrapper .newsletter__right .newsletter-form {
+  @apply twcss-m-0 !important;
+}
+
+.newsletter-form__field-wrapper .field__input {
+  @apply twcss-bg-white !important;
+}
+
+.newsletter-form__field-wrapper .button {
+  @apply twcss-bg-black twcss-w-full !important;
+}
+
+.newsletter__wrapper > * + * {
+  @apply twcss-m-0 !important;
+}
+
+.newsletter__right label {
+  @apply twcss-text-black twcss-font-bold twcss-mb-1;
+}
+/** Forms **/
